--- a/package.json
+++ b/package.json
@@ -11,13 +11,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-navigation/bottom-tabs": "^7.4.1",
+    "@react-navigation/native": "^7.1.12",
+    "@react-navigation/native-stack": "^7.3.20",
     "expo": "^53.0.12",
+    "expo-app-loading": "^2.1.1",
     "expo-status-bar": "~2.2.3",
     "nativewind": "latest",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.4",
+    "react-native-icons": "^0.7.1",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-web": "^0.20.0",
+    "react-navigation": "^5.0.0",
+    "expo-splash-screen": "~0.30.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
