--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "^0.79.4",
+    "react-native-animatable": "^1.4.0",
     "react-native-icons": "^0.7.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-web": "^0.20.0",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "expo-blur": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
